<resources>
    <string name="app_name">AplicationForTraning</string>
    <string name="tap">Tap</string>
    <string name="open_box">open box</string>
    <string name="options">options</string>
    <string name="about">about</string>
    <string name="exit">exit</string>
    <string name="name_application">Name Application:</string>
    <string name="version_name">Version Name:</string>
    <string name="version_code">Version Code:</string>
    <string name="ok">okay</string>
    <string name="about_activity_name">About</string>
    <string name="choose_number_text">Укажи число</string>
    <string name="save">save</string>
    <string name="activity_options">Options</string>

</resources>